src/scss/style.scss
@import "variables";

body {
	background-color: $background-color;
	font-family: $font-family;
	font-size: $font-size;
	font-weight: $font-weight;
	color: $default-font-color;
	margin: 0;
	padding: 0;
	width: 100%;
}

h1 {
	font-size: 24px;
	font-weight: 300;
	text-transform: uppercase;
}

h2 {
	font-size: 18px;
	font-weight: 700;
}

p {
	font-size: 16px;
	font-weight: 400;
	line-height: 24px;
}

header {
	width: 100%;
	padding: 0;
}

footer {
	clear: both;
	width: 100%;
	font-size: 14px;
	margin: 0;
}

footer .copy {
	padding: 25px 0 25px 75px;
	font-weight: 300;
	font-size: 14px;
}

table, th, td {
	border: 1px solid #AFAFAF;
	vertical-align: top;
	font-weight: 400;
}

th, td {
	padding: 10px;
}

th {
	background-color: $link-green;
}

a:link, a:visited {
	color: $link-green;
	text-decoration: none;
	font-weight: 400;
}

a:hover, a:active {
	color: $link-green;
	text-decoration: underline;
	font-weight: 400;
}
tr.grey {
	background-color: #DFDFDF;
}

#logo-area {
	background-color: #333;
	width: 100%;
	color: #fff;
	display: block;
	padding-bottom: 25px;
}

#logo-area svg {
	padding: 75px 0 0 75px;

	image {
		width: 100%;
	}
}

#logo-area .copy {
	padding: 0 0 0 75px;
	line-height: 20px;
}

.col-left-green {
	background: $link-green none repeat scroll 0% 0%;
	width: 40%;
	float: left;
	display: block;

}

.col-left-green .copy {
	color: #fff;
	margin: 0 auto 10% 75px;
	width: 75%;
	padding-top: 25px;
}

.col-right-grey {
	background: #f1f1f1 none repeat scroll 0% 0%;
	width: 60%;
	float: right;
	display: block;

}

.col-right-grey .copy {
	color: #333;
	margin: 0 auto 10%;
	width: 80%;
	padding-top: 25px;
}

.agenda, .agenda th {
	font-size:14px;
	text-align:left;
	vertical-align: top;
}

@media (max-width:1000px){
	.col-left-green {
		width: 100%;
	}

	.col-right-grey {
		background: #f1f1f1 none repeat scroll 0% 0%;
		width: 100%;
		display: block;
	}
}

